fixed cursor jumps after mention and emoji in safari and edge

--- a/src/app/text-editor/text-editor.component.css
+++ b/src/app/text-editor/text-editor.component.css
@@ -6,14 +6,15 @@
 #editor{
     border: 1px solid black;
     width: 40vw;
-    height: 100px;
+    min-height: 60px;
+    max-height: 240px;
     border-radius: 5px;
     padding-left: 25px;
     padding-top: 15px;
     padding-right: 25px;
     padding-bottom: 15px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 [contenteditable][placeholder]:empty:before {
